unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_SF_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To SF User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>To_SFUser</relationshipName>
    <type>Lookup</type>
</CustomField>