unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_UUID__c</fullName>
    <description>An Id that is identifies the From leg of the call. The Id may appear in multiple records if the call has been transferred</description>
    <externalId>true</externalId>
    <label>To UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>