unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__What__c.field-meta.xml
<CustomField>
    <fullName>nbavs__What__c</fullName>
    <description>Reference to another object which is not an Account,Case or Opportunity</description>
    <label>What</label>
    <type>Url</type>
</CustomField>