unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__What_Description__c.field-meta.xml
<CustomField>
    <fullName>nbavs__What_Description__c</fullName>
    <description>Reference to another object which is not an Account,Case or Opportunity.</description>
    <label>What Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>