unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Wrapup_Duration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Wrapup_Duration__c</fullName>
    <description>The time taken in seconds for the agent to wrapup the call</description>
    <label>Wrapup Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>