unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__WrapupCode_0__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WrapupCode_0__c</fullName>
    <description>The numeric number code</description>
    <label>Wrapup Code 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>