unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__WrapupLabel_0__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WrapupLabel_0__c</fullName>
    <description>A wrap up label</description>
    <label>Wrapup Label 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>