unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__WrapupLabel_1__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WrapupLabel_1__c</fullName>
    <description>A wrap up label 1</description>
    <label>Wrapup Label 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>