unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__WrapupString_0__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WrapupString_0__c</fullName>
    <description>A verbose wrapup string</description>
    <label>Wrapup String 0</label>
    <length>100</length>
    <type>Text</type>
</CustomField>