unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__WrapupString_1__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WrapupString_1__c</fullName>
    <description>A verbose wrapup string 1</description>
    <label>Wrapup String 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>