unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Year__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Year__c</fullName>
    <description>Year when call started</description>
    <formula>YEAR(DATEVALUE(nbavs__From_Start_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year when call started</inlineHelpText>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>