unpackaged/main/default/objects/nbavs__CallReporting__c/listViews/nbavs__All1.listView-meta.xml
<ListView>
    <fullName>nbavs__All1</fullName>
    <columns>NAME</columns>
    <columns>nbavs__From_Start_Time__c</columns>
    <columns>nbavs__From_End_Time__c</columns>
    <columns>nbavs__Call_Direction__c</columns>
    <columns>nbavs__From_Channel_Start_Time__c</columns>
    <columns>nbavs__From_AVS_User__c</columns>
    <columns>nbavs__To_AVS_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>