unpackaged/main/default/objects/nbavs__CallReporting__c/listViews/nbavs__Outbound.listView-meta.xml
<ListView>
    <fullName>nbavs__Outbound</fullName>
    <columns>NAME</columns>
    <columns>nbavs__From_Start_Time__c</columns>
    <columns>nbavs__From_End_Time__c</columns>
    <columns>nbavs__Call_Direction__c</columns>
    <columns>nbavs__From_AVS_User__c</columns>
    <columns>nbavs__From_Number__c</columns>
    <columns>nbavs__To_Number__c</columns>
    <columns>nbavs__From_Time_Talking__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>nbavs__Contact__c</columns>
    <columns>nbavs__Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nbavs__Call_Direction__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound</label>
</ListView>