unpackaged/main/default/objects/nbavs__CallReporting__c/listViews/nbavs__Recording_Links.listView-meta.xml
<ListView>
    <fullName>nbavs__Recording_Links</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Recording Links</label>
</ListView>