unpackaged/main/default/objects/nbavs__CallReporting__c/listViews/nbavs__Service.listView-meta.xml
<ListView>
    <fullName>nbavs__Service</fullName>
    <columns>NAME</columns>
    <columns>nbavs__From_Start_Time__c</columns>
    <columns>nbavs__From_End_Time__c</columns>
    <columns>nbavs__Call_Direction__c</columns>
    <columns>nbavs__From_AVS_User__c</columns>
    <columns>nbavs__From_Number__c</columns>
    <columns>nbavs__From_Dialled_Number__c</columns>
    <columns>nbavs__From_Time_Talking__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nbavs__Call_Direction__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Service</label>
</ListView>